# Gravisim

./: CMakeLists.txt  CompileAndRun.bat  CompileAndRun.sh  README.md
src/: main.cpp  sim_lotofbody.hpp
src/bodies/: body.cpp  body.hpp  body_manager.cpp  body_manager.hpp  trail_particle.cpp  trail_particle.hpp
src/core/: core_settings.hpp  simulation.cpp  simulation.hpp
src/simulations/: sim_circumbinarytrojans.hpp  sim_lotofbody.hpp  sim_solarsystem.hpp  sim_threebody.hpp
